--- a/apps/todos/src/app/app.component.html
+++ b/apps/todos/src/app/app.component.html
@@ -1,8 +1,6 @@
 <h1>Todos</h1>
 
-<ul>
-  <li *ngFor="let t of todos" class="todo">{{ t.title }}</li>
-</ul>
+<acme-todos [todos]="todos"></acme-todos>
 
 <button id="add-todo" (click)="addTodo()">Add Todo</button>
 
